breaks in the image descriptions

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a target="_blank" href="assets/piopow_title.png">
                 <img src="assets/piopow_title.png" width="600" height="400">
               </a>
-              <div class="desc">If there isn't a secret in the main menu, isn't a nes game</div>
+              <div class="desc">If there isn't a secret in the main menu,<br> isn't a nes game</div>
             </div>
         </div>
         <div class="responsive">
@@ -66,7 +66,7 @@
               <a target="_blank" href="assets/piopow_snow.png">
                 <img src="assets/piopow_snow.png" alt="Cinque Terre" width="600" height="400">
               </a>
-              <div class="desc">This is a free mimic game. I promise. Really.</div>
+              <div class="desc">This is a mimic free game.<br>I promise.<br>Really.</div>
             </div>
         </div>
         <div class="responsive">
@@ -74,7 +74,7 @@
               <a target="_blank" href="assets/piopow_chef.png">
                 <img src="assets/piopow_chef.png" alt="Cinque Terre" width="600" height="400">
               </a>
-              <div class="desc">Into the oven. Defeat the masterchef and take his hat</div>
+              <div class="desc">Into the oven.<br>Defeat the masterchef and take his hat</div>
             </div>
         </div>
         <div class="responsive">
