Typos and suggestions for better wording?

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
 
             <div class="seccion">About piopow:</div>
             <ul>
-                <li>Explosive turnbased roguelite</li>
-                <li>Dungeon layout is procedurally generated, as well enemies' placement, drops, etc</li>
+                <li>Explosive turn-based roguelite</li>
+                <li>Dungeon layout is procedurally generated, as well as enemies' placement, drops, etc.</li>
                 <li>2 playable characters</li>
-                <li>12 visually different enemies (and not using pallette swaps)</li>
+                <li>12 visually different enemies (and not using palette swaps)</li>
                 <li>Collectible items</li>
-                <li>First campaign is 20 levels divided over 4 different areas, and unlocks the 2nd character's quest</li>
-                <li>Second campaign is <i>hard</i>, and unlocks the 5th area and bombastic true ending</li>
+                <li>First campaign is 20 levels divided over 4 different areas, which unlocks the 2nd character's quest</li>
+                <li>Second campaign is <i>hard</i>, and unlocks the 5th area and the bombastic true ending</li>
                 <li>Destructible terrain is always fun !</li>
-                <li>It uses a <b>NROM</b> board like Micro Mages or Nebs 'n Debs</li>
+                <li>It uses an <b>NROM</b> board like Micro Mages or Nebs 'n Debs</li>
                 <li>A culinary story told with ingame cutscenes, and a bunch of surprises</li>
                 <li>7 music tracks</li>
-                <li>The game teaches itself. It was heavily playtested on people with zero knowhow of the rogue genre.</li>
-                <li>Particles and color emphasis for environmental effects
-                <li>It's super polished and cute. Aims to be a new little gem in the NES library</li>
+                <li>The game teaches itself. It was heavily playtested on people with zero know-how of the rogue genre.</li>
+                <li>Particles and color emphasis for environmental effects</li>
+                <li>It's super polished and cute. Aims to be a new little gem in the NES library.</li>
                 <li>Supports NTSC and PAL</li>
               </ul> 
         </div>
@@ -58,7 +58,7 @@
               <a target="_blank" href="assets/piopow_title.png">
                 <img src="assets/piopow_title.png" width="600" height="400">
               </a>
-              <div class="desc">If there isn't a secret in the main menu,<br> isn't a nes game</div>
+              <div class="desc">If there isn't a secret in the main menu,<br> it ain't a NES game</div>
             </div>
         </div>
         <div class="responsive">
@@ -66,7 +66,7 @@
               <a target="_blank" href="assets/piopow_snow.png">
                 <img src="assets/piopow_snow.png" alt="Cinque Terre" width="600" height="400">
               </a>
-              <div class="desc">This is a mimic free game.<br>I promise.<br>Really.</div>
+              <div class="desc">This is a mimic-free game.<br>I promise.<br>Really.</div>
             </div>
         </div>
         <div class="responsive">
@@ -91,12 +91,12 @@
 
         <div class="seccion">About me:</div>
         <ul>
-            <li>I'm from Argentina. And I will be moving to Tierra del Fuego soon. So, maybe this will be the most southern 8-bit game ever? :)</li>
-            <li>I feel culturally attached to the famicom more than the nes, so the possibility of making famicom releases it's a big plus for me! (the only market when I was a child was: US roms, in famicom cartridges, being played on PAL TVs! A total mess ha, but those little colorful cases stayed forever in my heart)</li>
-            <li>Piopow is a solo effort my myself! (But of course using a lot of help from the wonderfull nesdev community)
+            <li>I'm from Argentina, and I will be moving to Tierra del Fuego soon. So, maybe this will be the most southern 8-bit game ever? :)</li>
+            <li>I feel culturally attached to the Famicom more than the NES, so the possibility of making Famicom releases is a big plus for me! (the only market when I was a child was: US roms, in Famicom cartridges, being played on PAL TVs! A total mess ha, but those little colorful cases stayed forever in my heart)</li>
+            <li>Piopow is a solo effort, all by myself! (Of course, using a lot of help from the wonderful nesdev community)
             <li>I can produce world class illustration and design, so I'm kinda expecting (and want!) to do the labels, box art, etc, if that is possible.</li>
-            <li>Also I'm insterested in making promotional/box art for other retro games if you happen to be in need of an illustrator !</li>
-            <li>I had worked and released a bunch of other games in the past, but piopow is my presentation card to this lovelly scene... so... HELLO ! And I hope you enjoy piopow as much as I enjoyed making it !</li>
+            <li>Also I'm interested in making promotional/box art for other retro games if you happen to be in need of an illustrator !</li>
+            <li>I had worked and released a bunch of other games in the past, but piopow is my presentation card to this lovely scene... so... HELLO ! And I hope you enjoy piopow as much as I enjoyed making it !</li>
           </ul> 
 
         <div class="separator" style="font-size: 20px;">
