thanks nitram, miguel, kun and mun for the feedback!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>💣 PIOPOW</title>
+    <title>💣 PIOPOW: new NES game!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -19,79 +19,106 @@
         
         <!-- <hr> -->
         <div class="title">PIOPOW</div>
-        <div class="subtitle">is looking for retro publishers!</div>
+        <div class="subtitle">is looking for retro publishers !</div>
         <!-- <div class="subtitle">PIOPOW</div> -->
         <div class="text">
 
-            <p>My name is <a href="https://jeremiasbabini.netlify.app/" target="_blank">Jeremias Babini</a>, and I just created <b>a new game for the Famicom/NES</b>.
+            <p>My name is <a href="https://jeremiasbabini.netlify.app/" target="_blank">Jeremias Babini</a>, and I just created <b>a new game for the NES</b>.
             </p>
             <p>
-                Now, I'm looking for a publisher that can help me manufacture, sell and ship real cartridges  !
+                I trully believe Piopow came out to be something really special and unique on the Nes catalog.
+                <br>
+                So now I'm looking for a publisher that can help me manufacture, sell and ship real cartridges!
                 <br>
                 If you are interested, contact me by <a href="mailto:jeremias.babini@gmail.com" target="_blank">email</a> and I will send you a ROM to try it.
             </p>
 
             <div class="separator">💣🐤💣</div>
 
-            <div class="seccion">About piopow:</div>
+            <div class="seccion">About Piopow:</div>
             <ul>
-                <li>Explosive turn-based roguelite</li>
-                <li>Dungeon layout is procedurally generated, as well as enemies' placement, drops, etc.</li>
-                <li>2 playable characters</li>
-                <li>12 visually different enemies (and not using palette swaps)</li>
-                <li>Collectible items</li>
-                <li>First campaign is 20 levels divided over 4 different areas, which unlocks the 2nd character's quest</li>
-                <li>Second campaign is <i>hard</i>, and unlocks the 5th area and the bombastic true ending</li>
-                <li>Destructible terrain is always fun !</li>
-                <li>It uses an <b>NROM</b> board like Micro Mages or Nebs 'n Debs</li>
-                <li>A culinary story told with ingame cutscenes, and a bunch of surprises</li>
-                <li>7 music tracks</li>
-                <li>The game teaches itself. It was heavily playtested on people with zero know-how of the rogue genre.</li>
-                <li>Particles and color emphasis for environmental effects</li>
+                <li>Explosive turn-based roguelite.</li>
+                <li>Destructible terrain !</li>
+                <li>Levels are procedurally generated, so every playthrough is different.</li>
+                <li>A culinary story told with ingame cutscenes, and a bunch of surprises.</li>
+                <li>First campaign is 20 levels divided over 4 different areas, which unlocks the 2nd character's quest.</li>
+                <li>Second campaign is <i>hard</i>, and unlocks the 5th area and the bombastic true ending.</li>
                 <li>It's super polished and cute. Aims to be a new little gem in the NES library.</li>
-                <li>Supports NTSC and PAL</li>
-              </ul> 
+                <li>The game teaches itself. It was heavily playtested on people with zero know-how of the rogue genre.</li>
+                <li>Accessibility option to disable color flashes.</li>
+              </ul>
+            <div class="subseccion">Tech & Numbers</div>
+            <ul>
+              <li>It uses an <b>NROM</b> board like Micro Mages or Nebs 'n Debs.</li>
+              <li>2 playable characters.</li>
+              <li>12 visually different enemies (and not using palette swaps).</li>
+              <li>6 collectible items.</li>
+              <li>7 music tracks.</li>
+              <li>Supports NTSC and PAL.</li>
+              <!-- <li>Particles and color emphasis for environmental effects</li> -->
+              <!-- <li>It's super polished and cute. Aims to be a new little gem in the NES library.</li> -->
+            </ul>
         </div>
         
         <div class="responsive">
             <div class="gallery">
-              <a target="_blank" href="assets/piopow_title.png">
-                <img src="assets/piopow_title.png" width="600" height="400">
+              <a target="_blank" href="assets/piopow_title.gif">
+                <img src="assets/piopow_title.gif" width="256" height="240">
               </a>
               <div class="desc">If there isn't a secret in the main menu,<br> it ain't a NES game</div>
             </div>
         </div>
         <div class="responsive">
             <div class="gallery">
-              <a target="_blank" href="assets/piopow_snow.png">
-                <img src="assets/piopow_snow.png" alt="Cinque Terre" width="600" height="400">
+              <a target="_blank" href="assets/piopow_snow.gif">
+                <img src="assets/piopow_snow.gif" alt="Cinque Terre" width="600" height="400">
               </a>
-              <div class="desc">This is a mimic-free game.<br>I promise.<br>Really.</div>
+              <div class="desc">This is a mimic-free game.<br>I promise!</div>
             </div>
         </div>
         <div class="responsive">
             <div class="gallery">
-              <a target="_blank" href="assets/piopow_chef.png">
-                <img src="assets/piopow_chef.png" alt="Cinque Terre" width="600" height="400">
+              <a target="_blank" href="assets/piopow_chef.gif">
+                <img src="assets/piopow_chef.gif" alt="Cinque Terre" width="600" height="400">
               </a>
               <div class="desc">Into the oven.<br>Defeat the masterchef and take his hat</div>
             </div>
         </div>
         <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="assets/piopow_walls.gif">
+              <img src="assets/piopow_walls.gif" alt="Cinque Terre" width="600" height="400">
+            </a>
+            <div class="desc"> Collect and use items<br> Kick enemies' bombs </div>
+          </div>
+        </div>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="assets/piopow_credits.gif">
+              <img src="assets/piopow_credits.gif" alt="Cinque Terre" width="600" height="400">
+            </a>
+            <div class="desc"> Spare a enemy and make a new friend<br> or take revenge and kill them all<br></div>
+          </div>
+        </div>
+        <div class="responsive">
             <div class="gallery">
-              <a target="_blank" href="assets/piopow_bigbomb.png">
-                <img src="assets/piopow_bigbomb.png" alt="Cinque Terre" width="600" height="400">
+              <a target="_blank" href="assets/piopow_secret.gif">
+                <img src="assets/piopow_secret.gif" alt="Cinque Terre" width="600" height="400">
               </a>
-              <div class="desc"> <br> ??? <br><br></div>
+              <div class="desc"> Big Bomb Boi <br>vs Pollitos <br><br></div>
             </div>
         </div>  
 
         <div class="clearfix"></div>
         <!-- <a class="link" href="https://www.jeremiasbabini.me/" target="_blank">old personal site</a> -->
 
-        <div class="seccion">About me:</div>
+        <div class="separator" style="font-size: 20px; margin-top: -20px;">
+          (note: screenshakes, color blinks and tweens, show up shanky on these gifs)
+        </div>
+
+        <div class="seccion">About Me:</div>
         <ul>
-            <li>I'm from Argentina, and I will be moving to Tierra del Fuego soon. So, maybe this will be the most southern 8-bit game ever? :)</li>
+            <li>I'm from Argentina, and I will be moving to Tierra del Fuego soon. So, maybe this will be the most southern 8-bit game ever?</li>
             <li>I feel culturally attached to the Famicom more than the NES, so the possibility of making Famicom releases is a big plus for me! (the only market when I was a child was: US roms, in Famicom cartridges, being played on PAL TVs! A total mess ha, but those little colorful cases stayed forever in my heart)</li>
             <li>Piopow is a solo effort, all by myself! (Of course, using a lot of help from the wonderful nesdev community)
             <li>I can produce world class illustration and design, so I'm kinda expecting (and want!) to do the labels, box art, etc, if that is possible.</li>
