--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         <!-- <div class="subtitle">PIOPOW</div> -->
         <div class="text">
 
-            <p>My name is <a href="https://jeremiasbabini.netlify.app/" target="_blank">Jeremias Babini</a>, and I just created <b>a new game for the NES</b>.
+            <p>
+              My name is <a href="https://jeremiasbabini.netlify.app/" target="_blank">Jeremias Babini</a>, and I just created <b>a new game for the NES</b>.
+              <br>
+              I trully believe Piopow come out to be something really special and unique.
             </p>
             <p>
-                I trully believe Piopow came out to be something really special and unique on the Nes catalog.
-                <br>
-                So now I'm looking for a publisher that can help me manufacture, sell and ship real cartridges!
+                
+                So now I'm looking for a publisher that can help me manufacture, sell and ship real cartridges !
                 <br>
                 If you are interested, contact me by <a href="mailto:jeremias.babini@gmail.com" target="_blank">email</a> and I will send you a ROM to try it.
             </p>
@@ -73,7 +75,7 @@
               <a target="_blank" href="assets/piopow_snow.gif">
                 <img src="assets/piopow_snow.gif" alt="Cinque Terre" width="600" height="400">
               </a>
-              <div class="desc">This is a mimic-free game.<br>I promise!</div>
+              <div class="desc">This is a mimic-free game.<br>I promise !</div>
             </div>
         </div>
         <div class="responsive">
@@ -81,7 +83,7 @@
               <a target="_blank" href="assets/piopow_chef.gif">
                 <img src="assets/piopow_chef.gif" alt="Cinque Terre" width="600" height="400">
               </a>
-              <div class="desc">Into the oven.<br>Defeat the masterchef and take his hat</div>
+              <div class="desc">Defeat the masterchef <br> and take his hat</div>
             </div>
         </div>
         <div class="responsive">
@@ -112,18 +114,21 @@
         <div class="clearfix"></div>
         <!-- <a class="link" href="https://www.jeremiasbabini.me/" target="_blank">old personal site</a> -->
 
-        <div class="separator" style="font-size: 20px; margin-top: -20px;">
-          (note: screenshakes, color blinks and tweens, show up shanky on these gifs)
+        <div class="separator" style="font-size: 18px; margin-top: -20px;">
+          <i>(Note: Becouse of screen recording these gifs, all screenshakes, color blinks and tweens look quite janky)</i>
         </div>
+
+        <br>
+        <br>
 
         <div class="seccion">About Me:</div>
         <ul>
             <li>I'm from Argentina, and I will be moving to Tierra del Fuego soon. So, maybe this will be the most southern 8-bit game ever?</li>
-            <li>I feel culturally attached to the Famicom more than the NES, so the possibility of making Famicom releases is a big plus for me! (the only market when I was a child was: US roms, in Famicom cartridges, being played on PAL TVs! A total mess ha, but those little colorful cases stayed forever in my heart)</li>
-            <li>Piopow is a solo effort, all by myself! (Of course, using a lot of help from the wonderful nesdev community)
+            <li>I feel culturally attached to the Famicom more than the NES, so the possibility of making Famicom releases is a big plus for me! (The only market when I was a child was: US roms, in Famicom cartridges, being played on PAL TVs. A total mess ha, but those little colorful cases stayed forever in my heart)</li>
+            <li>Piopow is a solo effort by myself (Of course, using a lot of help from the wonderful nesdev community)
             <li>I can produce world class illustration and design, so I'm kinda expecting (and want!) to do the labels, box art, etc, if that is possible.</li>
             <li>Also I'm interested in making promotional/box art for other retro games if you happen to be in need of an illustrator !</li>
-            <li>I had worked and released a bunch of other games in the past, but piopow is my presentation card to this lovely scene... so... HELLO ! And I hope you enjoy piopow as much as I enjoyed making it !</li>
+            <li>I had worked and released a bunch of other games in the past, but piopow is my presentation card to this lovely scene... so... HELLO !!! And I hope you enjoy piopow as much as I enjoyed making it !</li>
           </ul> 
 
         <div class="separator" style="font-size: 20px;">
