--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>💣 PIOPOW: new NES game!</title>
+    <title>💣 PIOPOW (NES)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -26,7 +26,7 @@
             <p>
               My name is <a href="https://jeremiasbabini.netlify.app/" target="_blank">Jeremias Babini</a>, and I just created <b>a new game for the NES</b>.
               <br>
-              I trully believe Piopow come out to be something really special and unique.
+              I trully believe Piopow will come out to be something really special and unique.
             </p>
             <p>
                 
@@ -40,7 +40,7 @@
             <div class="seccion">About Piopow:</div>
             <ul>
                 <li>Explosive turn-based roguelite.</li>
-                <li>Destructible terrain !</li>
+                <li>Destructible terrain.</li>
                 <li>Levels are procedurally generated, so every playthrough is different.</li>
                 <li>A culinary story told with ingame cutscenes, and a bunch of surprises.</li>
                 <li>First campaign is 20 levels divided over 4 different areas, which unlocks the 2nd character's quest.</li>
@@ -53,9 +53,9 @@
             <ul>
               <li>It uses an <b>NROM</b> board like Micro Mages or Nebs 'n Debs.</li>
               <li>2 playable characters.</li>
-              <li>12 visually different enemies (and not using palette swaps).</li>
               <li>6 collectible items.</li>
               <li>7 music tracks.</li>
+              <li>12 visually different enemies (and not using palette swaps).</li>
               <li>Supports NTSC and PAL.</li>
               <!-- <li>Particles and color emphasis for environmental effects</li> -->
               <!-- <li>It's super polished and cute. Aims to be a new little gem in the NES library.</li> -->
@@ -91,7 +91,7 @@
             <a target="_blank" href="assets/piopow_walls.gif">
               <img src="assets/piopow_walls.gif" alt="Cinque Terre" width="600" height="400">
             </a>
-            <div class="desc"> Collect and use items<br> Kick enemies' bombs </div>
+            <div class="desc"> Collect and use items.<br> Kick enemies' bombs </div>
           </div>
         </div>
         <div class="responsive">
@@ -107,7 +107,7 @@
               <a target="_blank" href="assets/piopow_secret.gif">
                 <img src="assets/piopow_secret.gif" alt="Cinque Terre" width="600" height="400">
               </a>
-              <div class="desc"> Big Bomb Boi <br>vs Pollitos <br><br></div>
+              <div class="desc"> Big Bomb Boi <br>vs<br> Pollitos <br><br></div>
             </div>
         </div>  
 
@@ -115,7 +115,7 @@
         <!-- <a class="link" href="https://www.jeremiasbabini.me/" target="_blank">old personal site</a> -->
 
         <div class="separator" style="font-size: 18px; margin-top: -20px;">
-          <i>(Note: Becouse of screen recording these gifs, all screenshakes, color blinks and tweens look quite janky)</i>
+          <i>(Note: Because of screen recording these gifs, all screenshakes, color blinks and tweens look quite janky)</i>
         </div>
 
         <br>
@@ -123,12 +123,12 @@
 
         <div class="seccion">About Me:</div>
         <ul>
-            <li>I'm from Argentina, and I will be moving to Tierra del Fuego soon. So, maybe this will be the most southern 8-bit game ever?</li>
-            <li>I feel culturally attached to the Famicom more than the NES, so the possibility of making Famicom releases is a big plus for me! (The only market when I was a child was: US roms, in Famicom cartridges, being played on PAL TVs. A total mess ha, but those little colorful cases stayed forever in my heart)</li>
-            <li>Piopow is a solo effort by myself (Of course, using a lot of help from the wonderful nesdev community)
+            <li>I'm from Argentina, and I will be moving to Tierra del Fuego soon. So, maybe this will be the most southern 8-bit game ever ?</li>
+            <li>I feel culturally attached to the Famicom more than the NES, so the possibility of making Famicom releases is a big plus for me! (The only market when I was a child was: US roms, in Famicom cartridges, being played on PAL TVs. A total mess ha, but those little colorful cases stayed forever in my heart).</li>
+            <li>Piopow is a solo effort by myself (Of course, using a lot of help from the wonderful nesdev community).</li>
             <li>I can produce world class illustration and design, so I'm kinda expecting (and want!) to do the labels, box art, etc, if that is possible.</li>
             <li>Also I'm interested in making promotional/box art for other retro games if you happen to be in need of an illustrator !</li>
-            <li>I had worked and released a bunch of other games in the past, but piopow is my presentation card to this lovely scene... so... HELLO !!! And I hope you enjoy piopow as much as I enjoyed making it !</li>
+            <li>I have worked and released a bunch of other games in the past, but piopow is my presentation card to this lovely scene... so... HELLO !!! And I hope you enjoy piopow as much as I enjoyed making it !</li>
           </ul> 
 
         <div class="separator" style="font-size: 20px;">
