--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
           </ul> 
 
         <div class="separator" style="font-size: 20px;">
-            contact:
-            <a href="mailto:jeremias.babini@gmail.com" target="_blank">jeremias.babini@gmail.com</a>
+            email: <a href="mailto:jeremias.babini@gmail.com" target="_blank">jeremias.babini@gmail.com</a>
+            / 
+            twitter: <a href="https://twitter.com/bembidiona" target="_blank">@bembidiona</a>
         </div>
 
     </div>
