wiping new page

--- a/index.html
+++ b/index.html
@@ -90,14 +90,20 @@ ffmpeg.exe -framerate 30 -i cart_%d.png -c:v libvpx-vp9 cartucho.webm
         
         <div class="responsive">
             <div class="gallery">
-              <img src="assets/piopow_title.gif" width="256" height="240">
+              <img src="assets/piopow_intro.gif" width="256" height="240">
               <div class="desc">If there isn't a secret in the main menu,<br> it ain't a NES game</div>
             </div>
         </div>
         <div class="responsive">
+          <div class="gallery">
+              <img src="assets/piopow_matadero.gif"  width="600" height="400">
+            <div class="desc"> Collect and use items.<br> Kick enemies' bombs </div>
+          </div>
+        </div>
+        <div class="responsive">
             <div class="gallery">
               <img src="assets/piopow_snow.gif"  width="600" height="400">              
-              <div class="desc">This is a mimic-free game.<br>I promise !</div>
+              <div class="desc">Destroy walls, and make <br> your way into relaxing jacuzzis <br></div>
             </div>
         </div>
         <div class="responsive">
@@ -108,22 +114,28 @@ ffmpeg.exe -framerate 30 -i cart_%d.png -c:v libvpx-vp9 cartucho.webm
         </div>
         <div class="responsive">
           <div class="gallery">
-              <img src="assets/piopow_walls.gif"  width="600" height="400">
-            <div class="desc"> Collect and use items.<br> Kick enemies' bombs </div>
-          </div>
-        </div>
-        <div class="responsive">
-          <div class="gallery">
-              <img src="assets/piopow_credits.gif"  width="600" height="400">
-            <div class="desc"> Spare a enemy and make a new friend<br> or take revenge and kill them all<br></div>
+              <img src="assets/piopow_toxic.gif"  width="600" height="400">
+            <div class="desc"> Fly through danger<br><br></div>
           </div>
         </div>
         <div class="responsive">
             <div class="gallery">
-                <img src="assets/piopow_secret.gif"  width="600" height="400">
-              <div class="desc"> Big Bomb Boi <br>vs<br> Pollitos <br><br></div>
+                <img src="assets/piopow_bfb.gif"  width="600" height="400">
+              <div class="desc"> And rescue your kin!<br><br></div>
             </div>
-        </div>  
+        </div>
+        <div class="responsive">
+          <div class="gallery">
+              <img src="assets/piopow_hat.gif"  width="600" height="400">
+            <div class="desc"> A new chef in town <br> cooking some bombs<br><br></div>
+          </div>
+      </div>
+      <div class="responsive">
+        <div class="gallery">
+            <img src="assets/piopow_credits.gif"  width="600" height="400">
+          <div class="desc"> Spare a enemy and <br> make a new friend</div>
+        </div>
+    </div>  
 
         <div class="clearfix"></div>
       
